# gmcore_dashboard

./: LICENSE  README.md  __init__.py  cli.py  config.py  environment.yml  i18n.py  pyproject.toml  setup_env.sh
dashboard/: __init__.py  app.py  case_meta.py  colormaps.py  inspector.py  job_manager.py  log_parser.py  plots.py  scanner.py
dashboard/assets/: style.css
dashboard/tabs/: __init__.py  build_run.py  configure.py  experiments.py  monitor.py  multi_view.py  visualize.py
docs/: manual.md
experiments/: __init__.py  cli.py  compare.py  dashboard_backend.py  diagnostics.py  diagnostics.yaml  metrics.py  models.py  namelist_io.py  param_catalog.py  registry.py  registry.yaml  runner.py  store.py  sweep.py
experiments/templates/: earth_full.nml  gomars_base.nml  mars_full.nml
